@@ -1,3 +1,9 @@
+2013-02-07  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
+
+	* src/main.c, src/minicom.h, src/updown.c:
+	  [#314018] [PATCH] Disabling lockfile warnings when the
+	  device disappears (ttyUSB hot-unplug), by  Jaromir Capik
+
 2013-02-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
 
 	* NEWS: Release 2.6.2
